add logs and scripts
